@@ -5,6 +5,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayDeque;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
@@ -27,11 +28,15 @@ public class ImdbDockerImplementation implements Implementation {
     public int RUN_EVERY_N_HOUR = 12;
 
     private String apikeyTmdb;
+    
+    //Format: <USERNAME>;<USERKEY>;<APIKEY> for ENV
+    private String[] apiauthTvdb;
     private Path plexdata;
 
     @Override
     public void invoke(String[] args) throws Exception {
         apikeyTmdb = System.getenv("TMDB_API_KEY");
+        String tvdbAuth = System.getenv("TVDB_AUTH_STRING");
         String data = System.getenv("PLEX_DATA_DIR");
 
         Objects.requireNonNull(data, "Environment variable PLEX_DATA_DIR is not set");
@@ -59,11 +64,24 @@ public class ImdbDockerImplementation implements Implementation {
             System.exit(-1);
         }
 
-        if(apikeyTmdb == null || apikeyTmdb.trim().isEmpty()) {
+        if(apikeyTmdb == null || apikeyTmdb.isBlank()) {
             Logger.info("No TMDB API key detected. Will not attempt to do an TMDB <=> IMDB ID conversion to update TMDB matched items (unless already matched previously).");
         } else {
             Main.testApiTmdb(apikeyTmdb);
             Logger.info("TMDB API key enabled TMDB <=> IMDB matching. Will fetch IMDB ratings for non matched IMDB items.");
+        }
+        
+        if(tvdbAuth == null || tvdbAuth.isBlank()) {
+            Logger.info("No TVDB API authorization string detected. Will not attempt to update IMDB ratings for TV Series with the TVDB agent.");
+        } else {
+            String[] info = tvdbAuth.split(";");
+            if(info.length == 3) {
+                Main.testApiTvdb(info);
+                apiauthTvdb = info;
+                Logger.info("TVDB API authorization enabled IMDB rating update for TV Series with the TVDB agent.");
+            } else {
+                Logger.error("Invalid TVDB API authorization string given. Must contain 3 items seperated by a ';'. Will ignore TV Series with the TVDB agent.");
+            }
         }
 
         if(args.length >= 2) {
@@ -75,11 +93,25 @@ public class ImdbDockerImplementation implements Implementation {
         Logger.info("Invoke every " + RUN_EVERY_N_HOUR + " hour(s)");
 
         var state = State.recoverImdb(Main.STATE_IMDB);
-        var cache = ImdbTmdbCache.of(Main.PWD);
+        var caches = Map.of("tmdb", KeyValueStore.of(Main.PWD.resolve("cache-tmdb2imdb.json")), 
+                            "tvdb", KeyValueStore.of(Main.PWD.resolve("cache-tvdb2imdb.json")),
+                            "tvdb-blacklist", KeyValueStore.of(Main.PWD.resolve("cache-tvdbBlacklist.json")));
+        
+        var tvdbBlacklist = caches.get("tvdb-blacklist");
+        String expire = tvdbBlacklist.lookup("__EXPIRE");
+        if(expire == null) {
+            tvdbBlacklist.cache("__EXPIRE", Long.toString(System.currentTimeMillis()+TimeUnit.DAYS.toMillis(14)));
+        } else {
+            long l = Long.parseLong(expire);
+            if(l <= System.currentTimeMillis()) {
+                tvdbBlacklist.reset();
+                tvdbBlacklist.cache("__EXPIRE", Long.toString(System.currentTimeMillis()+TimeUnit.DAYS.toMillis(14)));
+            }
+        }
 
         Runtime.getRuntime().addShutdownHook(new Thread(() -> {
             try {
-                ImdbTmdbCache.dump(Main.PWD, cache);
+                caches.values().forEach(KeyValueStore::dump);
             } catch (Exception e) {
                 Logger.error("Failed to save cache.");
                 Logger.error(e);
@@ -98,50 +130,56 @@ public class ImdbDockerImplementation implements Implementation {
         if(!state.isEmpty())
             Logger.info("Loaded " + state.size() + " unfinished job(s).\n");
 
-        var config = new ImdbPipelineConfiguration(apikeyTmdb, plexdata.resolve("Metadata/Movies"));
+        var config = new ImdbPipelineConfiguration(apikeyTmdb, apiauthTvdb, plexdata.resolve("Metadata/Movies"));
         var scheduler = Executors.newSingleThreadScheduledExecutor();
         Logger.info("Running first task...");
-        scheduler.schedule(new ImdbBatchJob(config, plexdata, cache, state), 1, TimeUnit.SECONDS);
+        scheduler.schedule(new ImdbBatchJob(config, plexdata, caches, state), 1, TimeUnit.SECONDS);
         Logger.info("Scheduling next tasks to run @ every " + RUN_EVERY_N_HOUR + " hour(s)");
-        scheduler.scheduleAtFixedRate(new ImdbBatchJob(config, plexdata, cache, state), 1, RUN_EVERY_N_HOUR, TimeUnit.HOURS);
+        scheduler.scheduleAtFixedRate(new ImdbBatchJob(config, plexdata, caches, state), 1, RUN_EVERY_N_HOUR, TimeUnit.HOURS);
     }
 
     private static class ImdbBatchJob implements Runnable {
         private final ImdbPipelineConfiguration config;
         private final ExecutorService service;
-        private final ImdbTmdbCache cache;
+        private final Map<String, KeyValueStore> caches;
         private final Set<ImdbJob> state;
         private final String dbLocation;
         
-        public ImdbBatchJob(ImdbPipelineConfiguration config, Path plexdata, ImdbTmdbCache cache, Set<ImdbJob> state) {
+        public ImdbBatchJob(ImdbPipelineConfiguration config, Path plexdata, Map<String, KeyValueStore> caches, Set<ImdbJob> state) {
             service = Executors.newFixedThreadPool(6);
             this.config = config;
-            this.cache = cache;
+            this.caches = caches;
             this.state = state;
             this.dbLocation = plexdata.resolve("Plug-in Support/Databases/com.plexapp.plugins.library.db").toAbsolutePath().toString();
         }
 
         @Override
         public void run() {
+            try {
+                Main.rollingLogPurge();
+            } catch (IOException e) { e.printStackTrace(); }
             SqliteDatabaseProvider connection = null;
             try {
                 connection = new SqliteDatabaseProvider(dbLocation);
-                var libraries = new DatabaseSupport(connection).requestLibraries();
+                var support = new DatabaseSupport(connection);
+                var libraries = support.requestMovieLibraries();
+                if(config.resolveTvdb())
+                    libraries.addAll(support.requestSeriesLibraries());
                 var jobs = new ArrayDeque<ImdbJob>();
                 var db = new ImdbDatabaseSupport(connection);
-                var pipeline = new ImdbPipeline(db, service, cache, config, ImdbRatingDatasetFactory.requestSet());
+                var pipeline = new ImdbPipeline(db, service, caches, config, ImdbRatingDatasetFactory.requestSet());
                 var runner = new ImdbJobRunner();
                 for(var lib : libraries) {
-                    jobs.add(new ImdbJob(lib.name, lib.uuid));
-                    Logger.info("Library: " + lib.name + " has " + lib.items + " item(s)");
+                    jobs.add(new ImdbJob(lib));
+                    Logger.info("[{}] {} has {} item(s)", lib.type, lib.name, lib.items);
                 }
                 while(!jobs.isEmpty()) {
                     var job = jobs.pop();
-                    Logger.info("Processing library: " + job.library + " with UUID " + job.uuid + " at stage: " + job.stage);
+                    Logger.info("Processing [{}] {} with UUID {} at stage: {}", job.libraryType, job.library, job.uuid, job.stage);
                     var result = runner.run(job, pipeline);
                     Logger.info("Job returned " + result.code + " : " + result.userDefinedMessage);
                     if(result.code == StatusCode.PASS) {
-                        Logger.info("Job finished successfully for library " + job.library + " with UUID " + job.uuid);
+                        Logger.info("Job finished successfully for [{}] {} with UUID {}", job.libraryType, job.library, job.uuid);
                         state.remove(job);
                     }
                     if(result.code == StatusCode.API_ERROR) {
@@ -157,7 +195,7 @@ public class ImdbDockerImplementation implements Implementation {
                         throw Utility.rethrow(result.exception);
                     }
                 }
-                ImdbTmdbCache.dump(Main.PWD, cache);
+                caches.values().forEach(KeyValueStore::dump);
                 Logger.info("Completed batch successfully. Waiting till next invocation...");
                 Logger.info("It is now safe to suspend execution if this tool should not run 24/7.");
                 try { connection.close(); } catch (Exception e) {}
